Fixed input box height bug in windows on firefox.  Max-height should prevent it from overlapping.

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -51,6 +51,7 @@ html, body {
 
 .chat-input textarea {
 	width: 100%;
+	max-height: 55px;
 }
 
 /*
